@@ -72,7 +72,6 @@
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
       <version>2.10.1</version>
-      <scope>compile</scope>
     </dependency>
   </dependencies>
 
@@ -90,14 +89,7 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.2.5</version>
-        <configuration>
-          <argLine>
-            --add-opens edu.ntnu.stud.boardgame/edu.ntnu.stud.boardgame.io.board=ALL-UNNAMED
-            --add-opens edu.ntnu.stud.boardgame/edu.ntnu.stud.boardgame.model=ALL-UNNAMED
-            --add-opens edu.ntnu.stud.boardgame/edu.ntnu.stud.boardgame.model.action=ALL-UNNAMED
-            --add-opens edu.ntnu.stud.boardgame/edu.ntnu.stud.boardgame.exception.files=ALL-UNNAMED
-          </argLine>
-        </configuration>
+
       </plugin>
 
       <!-- JavaFX Maven plugin -->
